--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.datasource.username=admin
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# JWT settings
+
+jwt.private.key=classpath:app.key
+jwt.public.key=classpath:app.pub
+
+# upload files settings
+
+file.upload-dir=uploads
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
