--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+# Run the initialization SQL scripts
+
+spring.sql.init.mode=always
+
 # JWT settings
 
 jwt.private.key=classpath:app.key
