--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,10 @@
 services:
   postgres:
-    image: postgres:latest
-    container_name: postgres_container
+    image: bitnami/postgresql:latest
+    container_name: postgres_container_api
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: mydb
-      POSTGRES_ROOT_PASSWORD: 123
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: root
+      POSTGRESQL_DATABASE: test_db
