--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # PostgreSQL settings
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
-spring.datasource.username=admin
-spring.datasource.password=123
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/test_db}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Run the initialization SQL scripts
 
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 # JWT settings
 
@@ -20,3 +20,8 @@ jwt.public.key=classpath:app.pub
 file.upload-dir=uploads
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
+
+# Admin credentials
+
+admin.email=${ADMIN_EMAIL:adm@adm.com}
+admin.password=${ADMIN_PASSWORD:12345}
