adding docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # PostgreSQL settings
 
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/test_db}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/todolist}
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -25,3 +25,7 @@ spring.servlet.multipart.max-request-size = 5MB
 
 admin.email=${ADMIN_EMAIL:adm@adm.com}
 admin.password=${ADMIN_PASSWORD:12345}
+
+#Docker
+
+spring.docker.compose.file=./docker/docker-compose.yml
