--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
   postgres:
-    image: bitnami/postgresql:latest
-    container_name: postgres_container_api
-    ports:
-      - "5432:5432"
+    image: 'postgres:latest'
     environment:
-      POSTGRES_USERNAME: postgres
-      POSTGRES_PASSWORD: root
-      POSTGRESQL_DATABASE: test_db
+      - 'POSTGRES_DB=todolist'
+      - 'POSTGRES_PASSWORD=root'
+      - 'POSTGRES_USER=postgres'
+    ports:
+      - '5432:5432'
